@@ -1,3 +1,7 @@
+2001-05-04  Richard Henderson  <rth@redhat.com>
+
+	* elf64-alpha.c (SREL16, SREL32, SREL64): Set pcrel_offset true.
+
 2001-04-30  Andreas Jaeger  <aj@suse.de>, Andreas Schwab <schwab@suse.de>
 
 	* elf64-x86-64.c (elf64_x86_64_relocate_section): Correct test for
